@@ -1,3 +1,11 @@
+2005-01-05  Kenji Hisazumi  <nel@soraneko.com>
+
+	* cgi/kahua.cgi.in: 
+	introduced <response> class to represent http response
+	instead of response dispatcher
+
+	See [kahua-dev:00848-00850] for detail.
+
 2004-11-26  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua/server.scm (default-element-handler): recognize
